[FABRIC-397][FABRIC-398] Download fabs before passed to the FabResolver. Make sure that pax-url configuration is configured with the download location of the fabric-agent. Add feature descriptor for jboss fuse examples. Add integration test that tests all the above.